Sundry clean up
Remove privacy policy and terms of use from all pages for now.

Update formspree.io code on contact-us.html

--- a/contact-us.html
+++ b/contact-us.html
@@ -128,7 +128,7 @@
     
                 <div class="row block-9">
                     <div class="col-md-8">
-                        <form action="https://formspree.io/f/xvoyznbp" method="POST" class="bg-light p-4 p-md-5 contact-form">
+                        <form action="https://formspree.io/f/xoqbdbpn" method="POST" class="bg-light p-4 p-md-5 contact-form">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
@@ -260,12 +260,6 @@
                         <div class="copyright-text">
                             Copyright &copy;<script>document.write(new Date().getFullYear());</script> <b>MindCube Solutions Limited</b>. All rights reserved.
                         </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-lg-6">                        
-                        <ul class="policy-menu">
-                            <li><a href="#">Terms & Conditions</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                        </ul>                             
                     </div>
                 </div>
             </div>
